package fr.univartois.butinfo.r304.bomberman.model.map.mapgenerator;

import fr.univartois.butinfo.r304.bomberman.model.map.GameMap;

public interface IMapGenerator {
    GameMap genererMap();
}
